incorpore url de botones

--- a/index.html
+++ b/index.html
@@ -166,22 +166,6 @@
         }
 
         /*
-         * Estilos para el nuevo banner de imagen/video (AHORA ELIMINADOS)
-         */
-        /* .banner-container { ... } */
-        /* .banner-media-display { ... } */
-        /* .banner-media-display img, .banner-media-display video { ... } */
-        /* .banner-controls { ... } */
-        /* #current-datetime { ... } */
-        /* .analog-clock { ... } */
-        /* .analog-clock::before { ... } */
-        /* .hand { ... } */
-        /* .hour-hand { ... } */
-        /* .minute-hand { ... } */
-        /* .second-hand { ... } */
-
-
-        /*
          * Lista de elementos de módulo: el corazón de la interacción.
          * Se han mejorado los estados de `:hover` y `:active` para una respuesta táctil premium.
          */
@@ -1476,19 +1460,19 @@
 
                     switch (moduleName) {
                         case 'Buscador de Direcciones':
-                            window.open('https://www.google.com/maps', '_blank');
+                            window.open('https://visordirecciones2-production.up.railway.app/', '_blank');
                             break;
                         case 'Calculadora Boleta':
-                            window.open('https://sites.google.com/view/ciclofacturacionwom/p%C3%Aágina-principal', '_blank');
+                            window.open('https://sites.google.com/view/ciclofacturacionwom/p%C3%A1gina-principal', '_blank');
                             break;
                         case 'Evaluar RUT':
                             window.open('https://www.wom.cl/paga-aqui/', '_blank');
                             break;
                         case 'Condiciones Comerciales':
-                            window.open('https://www.ejemplo.com/condiciones-comerciales', '_blank');
+                            window.open('https://drive.google.com/drive/folders/1RFC7V23aiver5fL8iN-lneFGNLY7Hvp2?usp=sharing', '_blank');
                             break;
                         case 'Factibilidad':
-                            window.open('https://www.ejemplo.com/factibilidad', '_blank');
+                            window.open('https://sso-ocp4-sr-amp.apps.sr-ocp.wom.cl/auth/realms/customer-care/protocol/openid-connect/auth?client_id=e7c0d592&redirect_uri=https%3A%2F%2Fcustomercareapplicationservice.ose.wom.cl%2Fwomac%2Flogin&state=aa82ac36-b14f-4897-83e5-62691ea6a514&response_mode=fragment&response_type=code&scope=openid&nonce=7c0f7a43-125c-4a36-8fa2-836724d0b4e5', '_blank');
                             break;
                         default:
                             console.log(`No hay URL definida para ${moduleName}`);
@@ -1504,7 +1488,7 @@
                     console.log('Botón "Ingreso de Venta" principal clickeado.');
                     showCustomMessageBox('Abriendo formulario de ingreso de venta...');
 
-                    const url = 'https://sites.google.com/view/ciclowom/p%C3%Aágina-principal';
+                    const url = 'https://script.google.com/macros/s/AKfycbx9o-nk63thKqtbuu7LbqN6orvWqXPsvv-HL21jyfs/dev';
 
                     const width = 800;
                     const height = 600;
